# NNL

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  annotated.html  annotated_dup.js  classes.html  dir_09786a8025e0b2e254b5741bf5dae4c6.html  dir_09786a8025e0b2e254b5741bf5dae4c6.js  dir_41fa5584f5acbf947a48d4c8f7e4091e.html  dir_41fa5584f5acbf947a48d4c8f7e4091e.js  dir_420140106ebe667d135d76f988b8de8a.html  dir_420140106ebe667d135d76f988b8de8a.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_51ac859d123d85d0e253ce2cbb9aa6c2.html  dir_51ac859d123d85d0e253ce2cbb9aa6c2.js  dir_6641a4941b9d5e9ff16c2109a8135830.html  dir_6641a4941b9d5e9ff16c2109a8135830.js  dir_98b67a17aed77d674490ca96376d9867.html  dir_98b67a17aed77d674490ca96376d9867.js  dir_c1a4541e621b00a0fceeaf79b8232ec0.html  dir_c1a4541e621b00a0fceeaf79b8232ec0.js  dir_c8d74c2d20a28e15a6cb4de3179aa373.html  dir_c8d74c2d20a28e15a6cb4de3179aa373.js  dir_d3107fedcca9fb303e33e588a8cc15da.html  dir_d3107fedcca9fb303e33e588a8cc15da.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_df5f1f752ff6afd47fe2101329098628.html  dir_df5f1f752ff6afd47fe2101329098628.js  dir_eb13e7f4e1b1e59b8ffacb7fa12d9c51.html  dir_eb13e7f4e1b1e59b8ffacb7fa12d9c51.js  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  (+109 more)
.github/workflows/: docs.yml
d0/d08/: namespacennl_1_1animation.html
d0/d17/: group__Position.html  group__Position.js
d0/d29/: stexture_8hpp.html  stexture_8hpp.js  stexture_8hpp_source.html
d0/d32/: filesys_8hpp.html  filesys_8hpp.js  filesys_8hpp_source.html
d0/d43/: classnnl_1_1Writer_1_1Offset-members.html
d0/d78/: asset_8hpp.html  asset_8hpp.js  asset_8hpp_source.html
d0/d7d/: visanimation_8hpp.html  visanimation_8hpp.js  visanimation_8hpp_source.html
d0/db1/: group__SimpleValue.html  group__SimpleValue.js
d0/df0/: namespacennl_1_1adpcm.html
d1/d18/: group__Panic.html  group__Panic.js
d1/d35/: namespacennl_1_1model.html
d1/d41/: namespacennl_1_1vertexde.html
d1/d6b/: namespacennl_1_1utl_1_1data.html
d1/d73/: lit_8hpp.html  lit_8hpp.js  lit_8hpp_source.html
d1/d85/: namespacennl_1_1dig__entry.html  utf8_8hpp.html  utf8_8hpp.js  utf8_8hpp_source.html
d1/d8d/: group__Constants.html  group__Constants.js
d1/da7/: group__Texture__Main.html  group__Texture__Main.js
d1/dbc/: adpcm_8hpp.html  adpcm_8hpp.js  adpcm_8hpp_source.html
d1/dc4/: group__SModel.html  group__SModel.js
d1/dc5/: group__Common.html  group__Common.js
d1/dda/: model__common_8hpp.html  model__common_8hpp.js  model__common_8hpp_source.html
d1/ddf/: group__Collision.html  group__Collision.js
d1/de0/: texture_8hpp.html  texture_8hpp.js  texture_8hpp_source.html
d1/def/: group__Light__Main.html  group__Light__Main.js
d2/d0f/: fog_8hpp.html  fog_8hpp.js  fog_8hpp_source.html
d2/d40/: group__String.html  group__String.js
d2/d69/: group__ADPCM__Main.html  group__ADPCM__Main.js
d2/d7e/: vertexde_8hpp.html  vertexde_8hpp.js  vertexde_8hpp_source.html
d2/d9c/: group__Traits.html  group__Traits.js  group__Vertex__Main.html  group__Vertex__Main.js
d2/dab/: group__Light.html  group__Light.js
d2/daf/: namespacennl_1_1utl_1_1color.html
d2/dc6/: io_8hpp.html  io_8hpp.js  io_8hpp_source.html
d2/df6/: fixed__type_8hpp.html  fixed__type_8hpp.js  fixed__type_8hpp_source.html
d3/d07/: group__Model__Auxiliary.html  group__Model__Auxiliary.js
d3/d08/: collision_8hpp.html  collision_8hpp.js  collision_8hpp_source.html
d3/d3c/: group__Shadow__Raw.html
d3/d53/: group__Texture.html  group__Texture.js
d3/d5a/: group__SimpleAssets.html  group__SimpleAssets.js
d3/d5c/: group__Audio.html  group__Audio.js
d3/d74/: classnnl_1_1Writer_1_1Ref-members.html
d3/d7c/: group__Minimap__Main.html  group__Minimap__Main.js
d3/d83/: namespacennl_1_1action.html
d3/d85/: group__Dig__Raw.html  group__Dig__Raw.js
d3/d8e/: group__DigEntry.html  group__DigEntry.js
d3/db5/: group__Model__Shared.html  group__Model__Shared.js
d3/dc1/: group__File.html  group__File.js
d3/dd8/: group__Model__Raw.html  group__Model__Raw.js
d4/d0a/: format_8hpp.html  format_8hpp.js  format_8hpp_source.html
d4/d33/: group__Subanimation__Raw.html  group__Subanimation__Raw.js
d4/d43/: group__Simple3DAsset.html  group__Simple3DAsset.js
d4/d4b/: namespacennl_1_1fog.html
d4/d51/: group__Collection__Main.html  group__Collection__Main.js
d4/d6e/: group__Color.html  group__Color.js
d4/d78/: math_8hpp.html  math_8hpp.js  math_8hpp_source.html
d4/d90/: dig__entry_8hpp.html  dig__entry_8hpp.js  dig__entry_8hpp_source.html
d4/d9b/: group__ADPCM.html  group__ADPCM.js
d4/da0/: group__Model.html  group__Model.js  string_8hpp.html  string_8hpp.js  string_8hpp_source.html
d4/daf/: group__Fog__Raw.html  group__Fog__Raw.js
d4/db4/: group__Texture__Auxiliary.html  group__Texture__Auxiliary.js
d4/db6/: collection_8hpp.html  collection_8hpp.js  collection_8hpp_source.html
docs/: Doxyfile.in  glossary.md  repacking.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  (+121 more)
tests/: CMakeLists.txt  action_test.cpp  adpcm_test.cpp  animation_test.cpp  colbox_test.cpp  collision_test.cpp  compression_test.cpp  container_test.cpp  data_test.cpp  fog_test.cpp  format_test.cpp  io_test.cpp  lit_test.cpp  math_test.cpp  minimap_test.cpp  model_test.cpp  posd_test.cpp  render_conf_test.cpp  sasset3d_test.cpp  saudio_test.cpp  set_test.cpp  shadowcollision_test.cpp  smodel_test.cpp  stexture_test.cpp  svalue_test.cpp  test_common.hpp  tests.cpp  text_test.cpp  texture_test.cpp  vertexde_test.cpp  visanimation_test.cpp
(+362 files in other folders)
